[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "identify-sdk"
version = "0.1.0"
description = "Python client for the Identify auth service"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["mypy", "types-requests"]

[tool.mypy]
strict = true
