[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "identify-sdk"
version = "0.1.0"
description = "Python client for the Identify auth service"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://github.com/1909-pramod/identify-sdk"
Repository = "https://github.com/1909-pramod/identify-sdk"

[project.optional-dependencies]
dev = ["mypy", "types-requests"]

[tool.mypy]
strict = true
